@startuml

title __MISC's Class Diagram__\n

  namespace com.apetrei.misc {
    class com.apetrei.misc.ExtraMath {
        {static} + compare()
        {static} + compare()
        {static} + compareVectors()
        {static} + compareVectors()
        {static} + rotateVec()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Line {
        + Line()
        + getEnd()
        + getStart()
        + lenghtSquared()
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Vector2 {
        + x : float
        + y : float
        + Vector2()
        + Vector2()
        + Vector2()
        + add()
        + dot()
        + equals()
        + get()
        + lenghtSquared()
        + max()
        + min()
        + mul()
        + mul()
        + normalize()
        + set()
        + set()
        + setComponent()
        + sub()
        + toString()
    }
  }
  

  com.apetrei.misc.Line o-- com.apetrei.misc.Vector2 : from
  com.apetrei.misc.Line o-- com.apetrei.misc.Vector2 : to


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
